to fix the blur images on mobile and correct the text in updating page

--- a/templates/css/mobile.css
+++ b/templates/css/mobile.css
@@ -326,7 +326,8 @@
         top: -20px;
     }
     .swiper_banner .swiper-slide .img_blur img {
-        height: auto;
+        height: 60px;
+        width: 77px;
     }
     .img_blur {
         margin-bottom: 10px;
